--Version 3.6.4
  Added alias for fuelChest: enderRefuel
  Blacklist file parser now matches alpha-numeric characters and "_", but not commas :)
  enderChest and fuelChest are no longer assignable in the written config because I don't check for their existence except through parameters
  When not explicitly assigned, specialSlots like enderChests will auto-assign themselves if conflicts occur.
  New Parameters:
    -testParams [force]: Lists all the parameters you've selected and ends the program
    -lava/lavaBucket [slot]: Turtle will check itself and refuel with lava if possible.

--Version 3.6.3
  Turtle will attempt to drop "junk" items in oreQuarry before moving to drop stuff off. If two or less stacks changed, will still do full drop
  SmartFuel displays the current fuel multiplier
  Number parameters no longer silently convert negatives to positive, they just won't accept them
  Implemented "float" type of parameter that just doesn't math.floor the number
  String arguments now accept "/" (they can actually do file names in directories
  Removed sleep(1) from autostartup file because it was annoying
  Made bedrock function try to get out of bedrock intelligently. Hopefully won't get stuck
  Raised maxTries to 200
  Fixed bug where refueling had unexpected behavior near maxFuelLimit
  Added more options if neededFuel is over fuel limit
  Fixed -flatBedrock not working with -oreQuarry
  Added support for parameter aliases so I don't have to type as much adding aliases
  newSpecialSlot now intelligently errors if you try to have two slots the same
  New Parameters:
    -overfuel/fuelMultiplier [number]: This number is is what neededFuel is multiplied by when fuel is low.
    -version: This will display the current version number and end the program
    -file [fileName]: This will load a custom configuration file (basically a list of parameters). "##" starts comment lines. In the future "#" will start programs to run (but only through shell)